Fix packet reading